@@ -200,12 +200,12 @@ if (mysqli_num_rows($res) > 0) {
             <td>' . get_user_class_name($row['min_class_create']) . '</td>
             <td class="has-text-centered">
                 <span class="level-center">
-                    <span class="left10">
+                    <span class="left10 tooltipper" title="Edit">
                         <a href="' . $site_config['baseurl'] . '/staffpanel.php?tool=forum_manage&amp;action=forum_manage&amp;action2=edit_forum_page&amp;id=' . (int) $row['id'] . '">
                             <i class="icon-edit icon"></i>
                         </a>
                     </span>
-                    <span>
+                    <span class="tooltipper" title="Delete">
                         <a href="javascript:confirm_delete(\'' . $row['id'] . '\');">
                             <i class="icon-cancel icon"></i>
                         </a>
@@ -292,7 +292,7 @@ $HTMLOUT .= $option_12 . '
     </table>
     <div class="has-text-centered margin20">
         <input type="hidden" name="action2" value="add_forum" />
-        <input type="submit" name="button" class="button is-small margin20" value="' . $lang['fm_mp_remove'] . '" />
+        <input type="submit" name="button" class="button is-small margin20" value="' . $lang['fm_mp_btn'] . '" />
     </div>
     </form>
           <script>
